# jikuo

./: .gitignore  CHANGELOG.md  LICENSE.md  README.md  pyproject.toml
.codex/: hooks.json
.codex/hooks/: README.md  jikuo_user_prompt_submit.py
.github/workflows/: test.yml
.jikuo/: project_context.yaml  project_state.yaml
.jikuo/policies/: manifest.yaml
.jikuo/task_sessions/: task_20260514T130539Z_jikuo_live_15_self_bootstrap_task_session_bindin_aa0dd272.yaml  task_20260514T170932Z_mcp_pre_implementation_api_neutrality_review_82553d04.yaml  task_20260514T173432Z_jikuo_live_16_policy_runtime_card_priority_73c2f34d.yaml  task_20260515T012440Z_jikuo_sec_02_acceptance_record_af67af62.yaml  (+13 more)
docs/: README.md
tests/: activation_settings_tests.py  agent_flow_tests.py  codex_hook_tests.py  companion_write_obligations_tests.py  configuration_review_tests.py  demo_project_tests.py  doctor_tests.py  document_registry_tests.py  execution_envelope_tests.py  execution_events_schema_tests.py  host_adapter_contract_tests.py  instruction_files_tests.py  mcp_adapter_tests.py  mcp_server_tests.py  policy_management_status_tests.py  policy_store_tests.py  policy_templates_tests.py  private_turn_input_index_tests.py  project_state_tests.py  runtime_visibility_tests.py  runtime_write_observation_tests.py  starter_policies_tests.py  studio_artifact_assurance_tests.py  studio_document_rules_tests.py  studio_global_status_tests.py  studio_panel_action_registry_tests.py  studio_project_files_tests.py  studio_web_server_tests.py  task_session_cards_tests.py  task_session_tests.py
(+328 files in other folders)
