[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "jikuo"
version = "0.1.0"
description = "AI-primary process governance kernel"
requires-python = ">=3.10"
readme = "README.md"
license = { text = "Proprietary" }
authors = [{ name = "JIKUO contributors" }]
dependencies = ["mcp"]

[project.optional-dependencies]
dev = ["pytest>=8"]

[project.scripts]
jikuo = "jikuo.cli:main"
jikuo-activation-settings = "jikuo.activation_settings:main"
jikuo-agent-flow = "jikuo.agent_flow:main"
jikuo-mcp = "jikuo.integrations.mcp.server:main"
jikuo-policy-store = "jikuo.policy_store:main"
jikuo-policy-templates = "jikuo.policy_templates:main"
jikuo-project-state = "jikuo.project_state:main"
jikuo-starter-policies = "jikuo.starter_policies:main"
jikuo-task-session = "jikuo.task_session:main"
jikuo-task-session-cards = "jikuo.task_session_cards:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
jikuo = ["fixtures/**", "policy_templates/**", "starter_policy_packs/**"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["*_tests.py"]
